drm/i915: Seek only one guilty batch per hang

Instead of going through all the requests to find a batch that
hanged the machine, use hangcheck score and the fact that
first noncompleted request on hanged ring is, with great
probability, the guilty one. If we get multiple rings hanged
with equal hangcheck score, we blame the request that is oldest.

This guarantees that we only claim one and only one request guilty
per hang. This is essential as if context submitted faulty batches
on multiple rings, it could get banned immediately on first hang
instead required two hangs within short succession.

v2: Handle multiple ring hangs better (Ben Widawsky)

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=73652
Suggested-by: Chris Wilson <chris@chris-wilson.co.uk>
Signed-off-by: Mika Kuoppala <mika.kuoppala@intel.com>